--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       <div class="container">
         <div class="header-center">
-          <h1 class="title-description">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+          <h1 class="title-description">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
           <div class="header-contacts">
             <p class="phone-number">+7 (812) 555-05-55</p>
             <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -152,12 +152,12 @@
               </div>             
             </article>
 
-            <article class="product product-new">
+            <article class="product flag flag-new">
               <div class="product-image">
                 <img src="img/bfg-2000.png" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               </div>
               <h3 class="product-title">Перфоратор BOSCH BFG 2000</h3>
-              <a class="product-btn" href="#">12500 Р.</a>
+              <a class="product-btn no-discount" href="#">12500 Р.</a>
               <div class="product-overlay">
                 <a class="product-buy" href="#">Купить</a>
                 <a class="product-bookmark" href="#">В закладки</a>
@@ -172,30 +172,14 @@
             <a class="btn popular-btn" href="#">Все производители</a>
           </div>
           <article class="producers">
-            <div class="producers-img">
-              <a href="#"><img src="img/bosch.png" width="126" height="37" alt="BOSCH"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/makita.png" width="123" height="40" alt="Makita"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/dewalt.png" width="146" height="44" alt="DeWalt"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/interskol.png" width="200" height="88" alt="Интерскол"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/hitachi.png" width="169" height="31" alt="Hitachi"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/lg.png" width="121" height="73" alt="LG"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/aeg.png" width="151" height="96" alt="AEG"></a>
-            </div>
-            <div class="producers-img">
-              <a href="#"><img src="img/metabo.png" width="204" height="69" alt="Metabo"></a>
-            </div>      
+            <a class="producers-img" href="#"><img src="img/bosch2.png" width="220" height="145" alt="BOSCH"></a>
+            <a class="producers-img" href="#"><img src="img/makita2.png" width="220" height="145" alt="Makita"></a>
+            <a class="producers-img" href="#"><img src="img/dewalt2.png" width="220" height="145" alt="DeWalt"></a>           
+            <a class="producers-img" href="#"><img src="img/interskol2.png" width="220" height="145" alt="Интерскол"></a>           
+            <a class="producers-img" href="#"><img src="img/hitachi2.png" width="220" height="145" alt="Hitachi"></a>           
+            <a class="producers-img" href="#"><img src="img/lg2.png" width="220" height="145" alt="LG"></a>            
+            <a class="producers-img" href="#"><img src="img/aeg2.png" width="220" height="145" alt="AEG"></a>            
+            <a class="producers-img" href="#"><img src="img/metabo2.png" width="220" height="145" alt="Metabo"></a>     
           </article>
         </section>
       </div>  
@@ -205,37 +189,39 @@
           <h2 class="title-second">Сервисы</h2>
           <p class="service-description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="service-slider">
-            <input type="radio" id="service-btn-1" name="toggle" checked>
-            <input type="radio" id="service-btn-2" name="toggle">
-            <input type="radio" id="service-btn-3" name="toggle">
-            <div class="service-slider-controls">
-              <label for="service-btn-1">Доставка</label>
-              <label for="service-btn-2">Гарантия</label>
-              <label for="service-btn-3">Кредит</label>
-            </div>
-            <div class="service-sliders">
-              <div class="service-sliders-delivery">
-                <p class="service-sliders-title">Доставка</p>
-                <p class="sliders-description">Мы с удовольствием доставим ваш товар прямо<br>
-                к вашему подъезду совершенно бесплатно!
-                Ведь мы неплохо заработаем,<br>
-                поднимая его на ваш этаж!</p>
+            <div class="service-slider-menu">
+              <input type="radio" id="service-btn-1" name="toggle" checked>
+              <input type="radio" id="service-btn-2" name="toggle">
+              <input type="radio" id="service-btn-3" name="toggle">
+              <div class="radio-label">
+                <label for="service-btn-1">Доставка</label>
+                <label for="service-btn-2">Гарантия</label>
+                <label for="service-btn-3">Кредит</label>
               </div>
-              <div class="service-sliders-guarantee">
-                <p class="service-sliders-title">Гарантия</p>
-                <p class="service-sliders-description">Если купленный у нас товар поломается или заискрит,<br>
-                а также в случае пожара, спровоцированного его возгоранием,
-                вы всегда можете быть уверены в нашей гарантии. Мы обменяем
-                сгоревший товар на новый.<br>
-                Дом уж восстановите как-нибудь сами.</p>
+              <div class="service-sliders-content">
+                <div class="sliders-content-delivery">
+                  <p class="service-sliders-title">Доставка</p>
+                  <p class="slider-delivery">Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду совершенно бесплатно!
+                  Ведь мы неплохо заработаем,<br>
+                  поднимая его на ваш этаж!</p>
+                </div>
+                <div class="sliders-content-guarantee">
+                  <p class="service-sliders-title">Гарантия</p>
+                  <p class="service-guarantee">Если купленный у нас товар поломается или заискрит,<br>
+                  а также в случае пожара, спровоцированного его возгоранием,
+                  вы всегда можете быть уверены в нашей гарантии. Мы обменяем
+                  сгоревший товар на новый.<br>
+                  Дом уж восстановите как-нибудь сами.</p>
+                </div>
+                <div class="sliders-content-credit">
+                  <p class="service-sliders-title">Кредит</p>
+                  <p class="service-credit">Залезть в долговую яму стало проще!<br>
+                  Кредитные консультанты придут вам на помощь.</p>
+                  <a class="btn service-slider-btn" href="#">Отправить заявку</a>
+                </div>
               </div>
-              <div class="service-sliders-credit">
-                <p class="service-sliders-title">Кредит</p>
-                <p class="service-sliders-description">Залезть в долговую яму стало проще!<br>
-                Кредитные консультанты придут вам на помощь.</p>
-                <a class="btn service-sliders-btn" href="#">Отправить заявку</a>
-              </div>
-            </div>
+            </div>  
           </div>
         </div>  
       </section>
@@ -244,21 +230,23 @@
         <div class="company-contacts">
           <section class="about-us">
             <h2 class="title-second">Компания «ТЕХНОМАРТ»</h2>
-            <p class="company-contacts-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
-            <p class="company-contacts-description">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
+            <p class="company-contacts-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+            <p class="company-contacts-description-2">Мы можем доставить ваш товар в самые отдалённые точки России! Техномарт работает со многими транспортными компаниями:</p>
             <ul class="delivery-companies">
               <li>Деловые линии</li>
               <li>Автотрейдинг</li>
-              <li>ЖелДорЭскпедиция</li>
+              <li>ЖелДорЭкспедиция</li>
             </ul>
             <a class="btn about-us-btn" href="#">Подробнее о компании</a>
           </section>
 
           <section class="contacts">
             <h2 class="title-second">Контакты</h2>
-            <p class="company-contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
+            <p class="company-contacts-description-3">Вы можете забрать товар сами, заехав в наш офис:</p>
             <div class="map-img">
-              <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+              <a class="map" href="#">
+                <img src="img/map.png" width="300" height="158" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
+              </a>  
             </div>
             <a href="#" class="btn contacts-btn">Заблудились? Напишите нам!</a>
           </section>
@@ -330,7 +318,7 @@
           <p class="footer-contacts mailto">Обратная связь:
             <a class="yellow-text" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
-          <p class="footer-contacts feedback">Разработано -
+          <p class="footer-contacts feedback">Разработано –
             <a class="yellow-text" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
@@ -339,22 +327,36 @@
 
     <section class="modal modal-map visually-hidden">
       <h2 class="visually-hidden title-second">Как нас найти</h2>
-      <img src="img/map-popup.png" width="943" height="449" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">
-      <button class="modal-map-close" type="button">Закрыть</button>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6036253002912!2d30.320858715826557!3d59.938719169054494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1550844353752" width="943" height="449" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <!--<img src="img/map-popup.png" width="943" height="449" alt="Офис компании по адресу г. Санкт-Петербург, ул. Б.Конюшенная, д. 19/8">-->
+      <button class="modal-close" type="button">Закрыть</button>
     </section>
 
-    <section class="modal modal-login visually-hidden">
+    <section class="modal modal-write-us visually-hidden">
       <h2 class="visually-hidden title-second">Форма обратной связи</h2>
-      <form action="#" method="post">
-        <label for="your-name">Ваше имя:</label>
-        <input type="text" id="your-name" name="name" placeholder="Имя Фамилия">
-        <label for="your-email">Ваш e-mail:</label>
-        <input type="email" id="your-email" name="e-mail" placeholder="email@example.com">
-        <p><label for="your-message">Текст письма:</label>
-        <p><textarea id="your-message" placeholder="В свободной форме"></textarea></p>
-        <p><button class="btn" type="submit" value="Отправить">Отправить</button></p>
-        <button class="modal-login-close" type="button">Закрыть</button>
+      <form class="write" action="#" method="post">
+        <div class="message">
+          <div class="write-us-top">
+            <div class="write-us-name">
+              <label for="your-name">Ваше имя:</label>
+              <input type="text" id="your-name" name="name" placeholder="Имя Фамилия">
+            </div>
+            <div class="write-us-mail"> 
+              <label for="your-email">Ваш e-mail:</label>
+              <input type="email" id="your-email" name="e-mail" placeholder="email@example.com">
+            </div>
+          </div>  
+          <div class="write-us-bottom"> 
+            <label for="your-message">Текст письма:</label>
+            <textarea id="your-message" placeholder="В свободной форме"></textarea>
+          </div>
+        </div>
+        <div class="send-btn">
+          <button class="btn write-us-btn" type="submit" value="Отправить">Отправить</button>
+        </div>  
+        <button class="modal-close" type="button">Закрыть</button>
       </form>
     </section>
+    <script src="script.js"></script>
   </body>
 </html>
